@@ -1,4 +1,4 @@
-// generated by Fast Light User Interface Designer (fluid) version 1.0104
+// generated by Fast Light User Interface Designer (fluid) version 1.0105
 
 #include "../FL/Fl_File_Chooser.H"
 
@@ -149,10 +149,10 @@ Fl_File_Chooser::Fl_File_Chooser(const char *d, const char *p, int t, const char
         favoritesButton->label(favorites_label);
       }
       { Fl_Button* o = newButton = new Fl_Button(455, 10, 25, 25);
-        o->tooltip("Create a new directory.");
         o->image(image_new);
         o->labelsize(8);
         o->callback((Fl_Callback*)cb_newButton);
+        o->tooltip(new_directory_tooltip);
       }
       o->end();
     }
